Change border to box shadow to stop div from shifting upon hover.

--- a/css/styles.css
+++ b/css/styles.css
@@ -120,7 +120,7 @@ a {
 
 .btn--primary:hover {
   background: var(--color-primary);
-  border: 2px solid var(--color-secondary);
+  box-shadow: 0 0 0 2px var(--color-secondary);
   color: var(--color-secondary);
 }
 
